Clean-up of v1 due to Heroku issues

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
   <div id="blackout" class="blackout-item">
-    <img class="blackout-item blackout-chest-component" src="./img/hidden_elements/hidden_drake.png">
+    <!-- <img class="blackout-item blackout-chest-component" src="./img/hidden_elements/hidden_drake.png">
     <img class="blackout-item blackout-chest-component" src="./img/hidden_elements/hidden_step_1.png">
     <img class="blackout-item blackout-chest-component" src="./img/hidden_elements/hidden_step_2.png">
-    <img class="blackout-item blackout-chest-component" src="./img/hidden_elements/hidden_step_3.png">
+    <img class="blackout-item blackout-chest-component" src="./img/hidden_elements/hidden_step_3.png"> -->
   </div>
   <div id="header">
     <h1 id="playtest-header-text">Playtest</h1>
     <div id="header-right-elements">
       <a id="contact-email" href="mailto:info@theplaytest.com">info@theplaytest.com</a>
       <div id="header-right-links">
-        <a href="https://example.com">About</a>
-        <a href="https://example.com">Try It</a>
-        <a href="https://example.com">Buy It</a>
+        <a href="#steps-section" class="smooth-scroll">About</a>
+        <a href="#nathan-section" class="smooth-scroll">Try It</a>
+        <a id="hidden-link">Buy It</a>
       </div>
     </div>
   </div>
