Highlights for v1 landing page done

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script type="module" src="clicks.js"></script>
 </head>
 <body>
-  <div id="blackout" class="blackout-item">
+  <div id="blackout" class="blackout blackout-item">
     <!-- <img class="blackout-item blackout-chest-component" src="./img/hidden_elements/hidden_drake.png">
     <img class="blackout-item blackout-chest-component" src="./img/hidden_elements/hidden_step_1.png">
     <img class="blackout-item blackout-chest-component" src="./img/hidden_elements/hidden_step_2.png">
