--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto+Mono&family=Press+Start+2P">
   <script type="module" src="clicks.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.11.0/tsparticles.confetti.bundle.min.js"></script>
 </head>
 <body>
   <div id="blackout" class="blackout blackout-item">
