Oops, missed the files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto+Mono&family=Press+Start+2P">
   <script type="module" src="clicks.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.11.0/tsparticles.confetti.bundle.min.js"></script>
-  <script type="module" src="../Tiles/main.js"></script>
+  <script type="module" src="main.js"></script>
 </head>
 <body>
   <div id="blackout" class="blackout blackout-item">
