Page right-space weirdness fix

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
       <button id="signup-button" class="styled-button">GET FIRST ACCESS</button>
     </div>
   </div>
-  <div id="footer" class="white styled">Playtest</div>
+  <div id="footer">
+    <p id="footer-text" class="white styled ignore">Playtest</p>
+  </div>
 </body>
 </html>
