--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <title>Playtest</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto+Mono&family=Press+Start+2P">
-  <script type="module" src="clicks.js"></script>
+  <script type="module" src="clicks.js?timestamp=1690841941864"></script>
   <script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.11.0/tsparticles.confetti.bundle.min.js"></script>
-  <script type="module" src="main.js"></script>
+  <script type="module" src="main.js?timestamp=1690841941864"></script>
 </head>
 <body>
   <div id="blackout" class="blackout blackout-item">
