--- a/index.html
+++ b/index.html
@@ -27,35 +27,26 @@
     </div>
   </div>
   <div id="hero">
-    <p id="hero-header" class="plain white">Monetize your content with <span class="red">a</span><span class="orange">r</span><span class="green">t</span>.</p>
-    <img src="./img/script_copy.png" id="script-copier">
+    <p id="hero-header" class="plain white"><span class="red">G</span><span class="orange">a</span><span class="green">m</span><span class="red">i</span><span class="orange">f</span><span class="green">y</span> your content...</p>
+    <img src="./img/hidden_elements/hidden_script.png" id="script-copier">
     <p id="hero-footer" class="plain white">... in just a single line of code</p>
   </div>
   <div id="drake-problem">
-    <img src="./img/drake_meme.png" id="drake">
-    <p id="drake-caption" class="plain navy">Your readers hate ads.<br><br>Monetize with <span class="red">a</span><span class="orange">r</span><span class="green">t</span>,<br>not interruptions.</p>
+    <img src="./img/hidden_elements/hidden_drake.png" id="drake">
+    <p id="drake-caption" class="plain navy">Pub trivia gets customers in the door...<br><br>...are you using <span class="red">g</span><span class="orange">a</span><span class="green">m</span><span class="red">e</span><span class="orange">s</span> to delight your users?</p>
   </div>
   <div id="nathan-section" class="break-container">
-    <div id="nathan-article-container">
-      <img id="nathan-article" src="./img/nathan_chen.png">
-      <button id="nathan-button" class="styled-button">CLICK ME</button>
-      <div id="skate-container">
-        <img id="snowflake-1" class="snowflake" src="./img/snowflake.png">
-        <img id="snowflake-2" class="snowflake" src="./img/snowflake.png">
-        <img id="snowflake-3" class="snowflake" src="./img/snowflake.png">
-        <img id="snowflake-4" class="snowflake" src="./img/snowflake.png">
-        <img id="skater" src="./img/skater.png">
-      </div>
-    </div>
+    <!-- Need to add demo container, and then url bar and iframe to the inside of that demo container -->
+    <iframe id="iframe" src="./beast_store.html">
   </div>
   <div id="steps-section">
     <div id="step-container">
       <p id="surprise" class="styled-header styled navy">Woah! How'd you do that??<br><br>Simple. 3 Steps:</p>
       <div id="step-description-row">
         <img id="step-number" class="step-number" src=./img/1.png>
-        <p id="step-description-text" class="plain navy">We analyze your website’s content, tag each element, & find the best spots to place newly generated brand graphics.</p>
+        <p id="step-description-text" class="plain navy">We analyze your website’s content, tag each element, & get a picture of your site's context.</p>
       </div>
-      <img id="step-image" class="step-image" src="./img/step_1.png">
+      <img id="step-image" class="step-image" src="./img/hidden_elements/hidden_step_1.png">
       <button id="stepwise" class="styled-button">WHAT'S NEXT?</button>
     </div>
   </div>
@@ -66,11 +57,10 @@
     </div>
   </div>
   <div id="signup-section" class="break-container">
-    <div id="lol" class="white styled">LOL, just kidding</div>
-    <p id="signup-caption" class="navy plain">It's actually... <span class="italic">completely free</span>.<br>After all, it makes <span class="italic">you</span> money.</p>
+    <p id="signup-caption" class="navy plain">OR! Want Playtest for <span class="italic">free</span>?<br>Be the first to use our ad-supported tier.</p>
     <p id="signup-cta" class="navy plain">SIGN UP NOW:</p>
     <div id="signup-box">
-      <p id="signup-box-header" class="white styled">We'll email you next steps.</p>
+      <p id="signup-box-header" class="white styled">We'll email you when it's live.</p>
       <input id="email-input" type="email" placeholder="Enter work email">
       <button id="signup-button" class="styled-button">GET FIRST ACCESS</button>
     </div>
